# rust-parser-comparison

./: .gitignore  Cargo.toml  README.md  justfile
benches/: benchmark.rs  vanilla.rs
src/: 05.pest  common.rs  lib.rs  parsers.rs
src/parsers/: nom.rs  pest.rs  vanilla.rs
